add random sampling based on mesh

--- a/rl/config/full_w_her_w_sampling.yaml
+++ b/rl/config/full_w_her_w_sampling.yaml
@@ -3,6 +3,7 @@ task_kwargs:
   use_pixels: True
   use_segment: True
   sample_target: True
+  target_from_sites: False
 
 wrapper_kwargs:
   use_obs:
@@ -13,8 +14,3 @@ wrapper_kwargs:
 
 algo_kwargs:
   replay_buffer_class: 'HerReplayBuffer'
-
-
-
-
-
