--- a/src/cathsim/rl/config/test_full.yaml
+++ b/src/cathsim/rl/config/test_full.yaml
@@ -2,7 +2,10 @@
 task_kwargs:
   use_pixels: True
   use_segment: True
-  random_init_distance: 0
+  random_init_distance: 0.001
+  sample_target: True
+  target_from_sites: False
+  
 
 wrapper_kwargs:
   use_obs:
