--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 dependencies = [
     "gymnasium",
     "stable_baselines3@git+https://github.com/DLR-RM/stable-baselines3",
+    "tensorboard",
     "pyaml",
     "dm-control",
     "trimesh",
