--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "stable_baselines3@git+https://github.com/DLR-RM/stable-baselines3",
     "tensorboard",
     "pyaml",
-    "dm-control",
+    "dm-control==1.0.14",
     "trimesh",
     "opencv-python",
     "matplotlib",
