--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,8 @@ dependencies = [
     "stable_baselines3@git+https://github.com/DLR-RM/stable-baselines3",
     "tensorboard",
     "pyaml",
-    "mujoco==2.3.7",
-    "dm-control==1.0.14",
+    "dm-control",
+    # "mujoco",
     "trimesh",
     "opencv-python",
     "matplotlib",
