Add pyrealsense2 as a project dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dependencies = [
     "rich",
     "mergedeep",
     "rtree",
-    "toolz"
+    "toolz",
+    "pyrealsense2"
 ]
 
 [tool.setuptools.packages.find]
