--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cathsim"
-version = "0.1.dev1"
+version = "0.1.dev2"
 description = "Endovascular simulator for autonomy development"
 readme = "README.md"  # Point this to your README file if you have one.
 # Homepage = "https://robotvisionlabs.github.io/cathsim/"
@@ -21,40 +21,8 @@ classifiers = [
 ]
 dependencies = [
     "gymnasium",
-    "stable_baselines3@git+https://github.com/DLR-RM/stable-baselines3",
-    "tensorboard",
-    "pyaml",
-    "dm-control",
-    # "mujoco",
-    "trimesh",
-    "opencv-python",
-    "matplotlib",
-    "tqdm",
-    "rich",
-    "mergedeep",
-    "rtree",
-    "toolz"
+    "mujoco",
 ]
 
 [tool.setuptools.packages.find]
 where = ["src"]
-
-
-[project.optional-dependencies]
-docs = [
-    "sphinx",
-    "sphinx-autobuild",
-    "sphinx-rtd-theme",
-    "sphinxcontrib.spelling",
-    "sphinx-autodoc-typehints",
-    "sphinx_copybutton"
-]
-dev = [
-    "pytest",
-    "gymnasium[box2d]",
-]
-
-[project.scripts]
-run_env = "cathsim.console:cmd_run_env"
-visualize_agent = "cathsim.console:cmd_visualize_agent"
-train = "cathsim.console:cmd_train"
