--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["setuptools", "wheel==0.38.4"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "cathsim"
 version = "0.1.dev2"
@@ -22,6 +18,8 @@ classifiers = [
 dependencies = [
     "gymnasium",
     "mujoco",
+    "opencv-python",
+    "imageio",
 ]
 
 [tool.setuptools.packages.find]
