--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "imageio",
 ]
 
+[tool.setuptools.package-data]
+myModule = ["*.xml", "*.obj", "*.mtl"]
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
