--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
+title: CathSim
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username: username
+# twitter_username: username
 github_username: username
 minimal_mistakes_skin: default
 search: true
@@ -48,6 +48,11 @@ include:
 #   - vendor/gems/
 #   - vendor/ruby/
 
+header:
+  teaser: /assets/images/500x300.png
+
+teaser: /assets/images/500x300.png
+
 # Plugins (previously gems:)
 plugins:
   - jekyll-paginate
@@ -57,48 +62,43 @@ plugins:
   - jemoji
   - jekyll-include-cache
 
-author:
-  name: "First Lastname"
-  avatar: "/assets/images/bio-photo.jpg"
-  bio: "My awesome biography constrained to a sentence or two goes here."
-  links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+# author:
+# name: "CathSim"
+# avatar: "/assets/images/bio-photo.jpg"
+# bio: "My awesome biography constrained to a sentence or two goes here."
+# links:
+# - label: "GitHub"
+# icon: "fab fa-fw fa-github"
+# url: "https://github.com/"
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/airvlab/cathsim"
 
 defaults:
-  # _posts
   - scope:
       path: ""
-      type: posts
+      type: home
     values:
-      layout: single
-      author_profile: true
-      read_time: true
-      comments: true
+      layout: splash
+      author_profile: false
+      read_time: false
+      comments: false
       share: true
-      related: true
+      related: false
+  # _posts
+  # - scope:
+  #     path: "posts"
+  #     type: posts
+  #   values:
+  #     layout: single
+  #     author_profile: false
+  #     read_time: false
+  #     comments: false
+  #     share: true
+  #     related: false
   # _pages
   - scope:
       path: "_pages"
