--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,9 +1,8 @@
 main:
-  - title: "Posts"
+  - title: "Blog"
     url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
+  - title: "Papers"
     url: /tags/
-  - title: "About"
-    url: /about/
+  - title: "Download"
+    url: /categories/
+
