--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 # twitter_username: username
 github_username: username
 minimal_mistakes_skin: default
-search: true
+search: false
 
 # Build settings
 markdown: kramdown
@@ -71,11 +71,20 @@ plugins:
 # icon: "fab fa-fw fa-github"
 # url: "https://github.com/"
 
+atom_feed:
+  hide: true
+
 footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
+      url: "https://github.com/airvlab"
+    - label: "Code"
+      icon: "fas fa-fw fa-link"
       url: "https://github.com/airvlab/cathsim"
+    - label: "Contact"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "https://www.csc.liv.ac.uk/~anguyen/"
 
 defaults:
   # _posts
