--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,9 +1,5 @@
 main:
-  - home: "Home"
-    url: "/home"
-  - title: "Blog"
-    url: /posts/
   - title: "Papers"
-    url: /tags/
-  - title: "Download"
-    url: /categories/
+    url: /papers/
+  - title: "About"
+    url: /about/
