--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -87,6 +87,9 @@ footer:
       icon: "fas fa-fw fa-envelope-square"
       url: "https://www.csc.liv.ac.uk/~anguyen/"
 
+collections:
+  papers: output= true
+
 defaults:
   # _posts
   - scope:
