--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -3,5 +3,5 @@ main:
     url: /introduction/
   - title: "Papers"
     url: /papers/
-  - title: "About"
-    url: /about/
+  # - title: "About"
+  #   url: /about/
