--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -52,7 +52,7 @@ docs:
       - title: "CathAction"
         url: /docs/cathaction/
       - title: "Guide3D"
-        url: /docs/guide3D/
+        url: /docs/guide3d/
         
         
         
