--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -23,7 +23,7 @@ main:
   - title: "Introduction"
     url: /docs/introduction/
   - title: "Autonomous Catheterization"
-    url: /docs/autonomous-catheterization/
+    url: /docs/robot/
   - title: "Code & Data"
     url: /docs/code/
 
