--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -90,7 +90,7 @@ footer:
 defaults:
   # _posts
   - scope:
-      path: "posts"
+      path: ""
       type: posts
     values:
       layout: single
