--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -123,7 +123,7 @@ footer:
      - label: "GitHub"
        icon: "fab fa-fw fa-github"
        url: "https://github.com/airvlab"
-     - label: "Developer"
+     - label: "Code"
        icon: "fas fa-fw fa-link"
        url: "https://tudorjnu.github.io/"
      - label: "Contact"
